@@ -32,11 +32,26 @@ DATA_TABLES_DIR <- file.path(DATA_DIR, "data-tables")
 # basically readings metadata.)
 MAPS_DIR <- file.path(DATA_DIR, "maps")
 
+# Directory of generated data and mapping files
+GENERATED_DIR <- file.path(DATA_DIR, "generated")
 
-# ----- Files -----
+
+# ----- Raw data and mapping files -----
 
 # The file containing all the raw (unmapped) OD readings
 READINGS_FILE <- file.path(DATA_TABLES_DIR, "Readings.csv")
+
+# The record of plates lost during the testing runs
+LOST_PLATES_FILE <- file.path( MAPS_DIR, "LostPlates.csv")
+
+# The record of plates discarded during the manufacturing run
+DISCARDED_PLATES_FILE <- file.path( MAPS_DIR, "DiscardedPlates.csv")
+
+# The record of the runs (day, shift, run-in-shift, plate ID)
+RUNS_MAP_FILE <- file.path( MAPS_DIR, "RunsMap.csv" )
+
+
+# ----- Generated data and mapping files -----
 
 # The file of merged maps and OD readings for the "Manufacturing"
 # (non-MSA) plates
@@ -51,15 +66,8 @@ MSA_MAP_FILE <- file.path(MAPS_DIR, "MSAMap.csv")
 # The table of mapped MSA data
 MSA_MASTER_FILE <- file.path(DATA_TABLES_DIR, "MSAMastertable.csv") 
 
-# The record of plates lost during the testing runs
-LOST_PLATES_FILE <- file.path( MAPS_DIR, "LostPlates.csv")
-
-# The record of plates discarded during the manufacturing run
-DISCARDED_PLATES_FILE <- file.path( MAPS_DIR, "DiscardedPlates.csv")
-
-# The record of the runs (day, shift, run-in-shift, plate ID)
-RUNS_MAP_FILE <- file.path( MAPS_DIR, "RunsMap.csv" )
-
+# The master SQLite database
+DATABASE <- file.path( GENERATED_DIR, "alldata.sqlite")
 
 
 # Utility functions -------------------------------------------------------
@@ -83,58 +91,4 @@ get_wells <- function() {
     mutate(Well=ordered(Well, levels=Well))  # Sort it...
   
   return(well_names)
-}
-
-
-
-# File-loading functions --------------------------------------------------
-
-
-get_readings <- function() {
-  read.csv(READINGS_FILE)
-}
-
-
-get_mfg_table <- function() {
-  
-  mfg_table <- read.csv(MFG_MASTER_FILE)
-  mfg_table[["Well"]] <- 
-    ordered(mfg_table[["Well"]], levels=get_wells()$Well)
-  mfg_table[["Shift"]] <-
-    ordered( mfg_table[["Shift"]], levels=c("Day", "Evening") )
-  
-  return(mfg_table)
-}
-
-
-get_mfg_summary <- function() {
-  summary_tab <- 
-    read.csv(MFG_SUMMARY_FILE)
-}
-
-
-get_msa_map <- function() {
-  read.csv(MSA_MAP_FILE)
-}
-
-
-get_msa_table <- function() {
-  read.csv(MSA_MASTER_FILE)
-}
-
-
-# The record of plates lost during testing
-get_lost_map <- function() {
-  read.csv(LOST_PLATES_FILE)
-}
-
-
-# The record of plates lost during manufacture
-get_discarded_map <- function() {
-  read.csv(DISCARDED_PLATES_FILE)
-}
-
-
-get_runs_map <- function() {
-  read.csv(RUNS_MAP_FILE)
 }
