@@ -7,3 +7,7 @@
 02/27/2019 JRS
 
 * Removed "Start times.csv" (not complete, not needed)
+* Separated raw-data loading functions into a separate file.  Converted these to
+more structured tibble tables.
+* Created an "R/scripts" directory for one-time scripts; moved
+embedded-msa-assembly.R there.
